@@ -5,7 +5,6 @@
 Version 0.3
 ============
 	paranoia
-	 * add generated key to keylist
 	 * /otp scan, to read in new keys
 	 * add a message queue thread
 	 	* enhanced session management (auto ack)
@@ -16,7 +15,6 @@ Version 0.3
 	libotp
 	 * checking for \0\0\0 on decrypt to check if the message is valid 
 	 * keyfile entropy really checked for patterns
-	 * a signal for the key status
 
 	other
 	 * commandline program that can use libotp for general usage
