@@ -12,6 +12,7 @@ Simon Wenner:
  * Paranoia: Key settings are resetted if a buddy goes offline
  * Paranoia: '/otp list' added to list all available keys
  * Paranoia: no more request messages for offline buddies
+ * Paranoia: add generated key to the key list
 
 Christian Wäckerlin:
  * Libotp: System of error syndromes (OtpError) implemented
@@ -28,6 +29,7 @@ Christian Wäckerlin:
 Pascal Sachs:
  * Libotp: Create and integrate the threaded key-generator
  * Libotp: Support for loop key creation
+ * Libotp: Add a signal for the key generation status
 
 
 Version 0.1.0
